<resources>
    <string name="app_name">TestApp</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="hint_password">Enter desired password</string>
    <string name="hint_username">Enter desired username</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_your_un">Enter your username</string>
    <string name="hint_your_pw">Enter your password</string>
    <string name="LoG">Lists of Gifts</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="remember">Remember details</string>
    <string name="hint_conf_pass">Confirm desired password</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_wish">Enter desired wish</string>
    <string name="btn_add">Add</string>
    <string name="btn_delete">Delete</string>
    <string name="user_info">User Info</string>
    <string name="btn_save">Save</string>
    <string name="hint_your_name">Enter your name</string>
    <string name="btn_update">Update</string>
    <string name="hint_new_pass">Enter new password</string>
    <string name="hint_your_fn">First name</string>
    <string name="hint_your_ln">Last name</string>
    <string name="hint_conf_new_pass">Confirm new password</string>
    <string name="create_wl">Create a wish list</string>
    <string name="hint_wn">Enter wish name</string>
    <string name="hint_wd">Enter wish description</string>
    <string name="hint_wpl">Enter purchasable location</string>
    <string name="wish_info">Wish info</string>
    <string name="hint_wish_name">Enter desired wish</string>
    <string name="hint_wish_desc">Enter description of wish</string>
    <string name="hint_wish_place">Enter purchasable location</string>
    <string name="hint_wish_list">Choose wishlist to add it to</string>
    <string name="btn_create">Create List</string>
    <string name="hint_wl_name">Enter name of wishlist</string>
    <string name="hint_wl_desc">Enter wishlist description</string>
    <string name="hint_create_add">Add a wish to your list</string>
    <string name="list_shared">Lists shared with you</string>
    <string name="lists_yours">Your lists</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
