
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/LinearLayout1"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="30dp"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.listsofgifts.MainActivity"
tools:ignore="SpUsage"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="@string/LoG"
        android:textSize="25dp"
        />
</LinearLayout>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:padding="10dp"
    >

    <EditText
        android:id="@+id/login_un"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/hint_your_un"
        android:textColorHint="#cccccc"
        android:background="@drawable/rounded_corners"
        />
    <EditText
        android:id="@+id/login_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:padding="10dp"
        android:hint="@string/hint_your_pw"
        android:textColorHint="#cccccc"
        android:inputType="textPassword"
        android:background="@drawable/rounded_corners"
        />
    <CheckBox
        android:id="@+id/loginRememberBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_login"
        android:background="#F2473F"
        android:textAllCaps="false"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/btn_login_reg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_register"
        android:background="#F2473F"
        android:textAllCaps="false"
        android:textSize="20sp"
        />
</LinearLayout>
</LinearLayout>